[package]
name = "flight-tracker"
version = "0.2.0"
description = "ADSB flight tracker"
authors = ["António Marques <me@antoniomarques.eu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/flight-tracker"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "flight-tracker"
path = "src/bin.rs"

[dependencies]
adsb = { version = "0.3" }
anyhow = { version = "1", optional = true }
clap = { version = "4",  features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["anyhow", "clap"]
